tests/build/cases/property/method_cannot_be_property.stderr
error: methods cannot be properties
  --> cases/property/method_cannot_be_property.rs:10:25
   |
10 |     pub fn self_method1(self, input: impl IntoVar<bool>) -> impl UiNode {
   |                         ^^^^

error: methods cannot be properties
  --> cases/property/method_cannot_be_property.rs:16:25
   |
16 |     pub fn self_method2(self: Box<Self>, input: impl IntoVar<bool>) -> impl UiNode {
   |                         ^^^^
